# SeekCytometer-desktop

./: CMakeLists.txt  CytometerController.cpp  MainWindow.cpp  MainWindow.h  resource.qrc
camera/: CameraController.cpp  CameraController.h  CameraWidget.cpp  CameraWidget.h
camera_lib/: SeekCytometer 相机控制需求.md
camera_lib/win_x64/: JHCap.h  JHCap2.exp  JHCap2.lib
data_manage/: DataManager.cpp  EventData.cpp  EventData.h  EventDataManager.cpp
data_visualization/: AddGateButtonItem.cpp  AddGateButtonItem.h  AxisManualAdjustButton.cpp  AxisManualAdjustButton.h  CustomAxis.h  EllipseGateItem.cpp  GateItem.h  HistogramPlot.cpp  HistogramPlot.h  IntervalGateItem.cpp  IntervalGateItem.h  PlotBase.cpp  PlotBase.h  PolygonGateItem.cpp  QuadrantGateItem.cpp  RectangleGateItem.cpp  RectangleGateItem.h  ScatterPlot.cpp  ScatterPlot.h  WorkSheetScene.cpp  WorkSheetScene.h  WorkSheetView.cpp
database/: BaseDAO.cpp  BaseDAO.h  Gate.cpp  Gate.h  GatesDAO.cpp
datamodel/: GateStatistics.h  GatesModel.cpp  GatesModel.h
dialogs/: AddNewPlotDialog.cpp
doc/: SeekCytometer 分选门控功能.md
network/: UdpCommClient.cpp  UdpCommClient.h
sql/: create_db_seekcytometer.sql
test/: TestDataGenerator.cpp
widgets/: DataAcquisitionWidget.cpp  ExperimentsBrowser.cpp  MenuBarManager.cpp  MenuBarManager.h  SortingWidget.cpp  SortingWidget.h  SpeedMeasureWidget.cpp  WorkSheetWidget.cpp  WorkSheetWidget.h
